centre align issue

--- a/website/static/css/style.css
+++ b/website/static/css/style.css
@@ -63,7 +63,7 @@ body {
 }
 
 .content {
-    margin-top: -150px;
+    margin-top: 150px;
 }
 
 .coming-soon {
